sandbox/output
Patient.java:18: error: method isOverlapped in class Patient cannot be applied to given types;
        if (!isOverlapped(medicine, clashingMedicine, daysBeforeToday)) {
             ^
  required: Medicine,Medicine,long,LocalDate
  found: Medicine,Medicine,long
  reason: actual and formal argument lists differ in length
Patient.java:48: error: cannot find symbol
            now.minusDays(daysBeforeToday);
            ^
  symbol:   variable now
  location: class Patient
Patient.java:54: error: cannot find symbol
            if (now.isAfter(startA) &&
                ^
  symbol:   variable now
  location: class Patient
Patient.java:55: error: cannot find symbol
                    now.isBefore(endB)) {
                    ^
  symbol:   variable now
  location: class Patient
4 errors
